Fixed project configuration in CMake

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.16)
-project(Project3 LANGUAGES CXX)
+project(Project3v2 LANGUAGES CXX)
 
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 option(BUILD_SHARED_LIBS "Build shared libraries" OFF)
@@ -10,18 +10,17 @@ FetchContent_Declare(SFML
         GIT_TAG 2.6.x)
 FetchContent_MakeAvailable(SFML)
 
-add_executable(Project3 main.cpp
-        Textures.h)
+add_executable(Project3v2 main.cpp)
 
-target_link_libraries(Project3 PRIVATE sfml-graphics)
-target_compile_features(Project3 PRIVATE cxx_std_17)
+target_link_libraries(Project3v2 PRIVATE sfml-graphics)
+target_compile_features(Project3v2 PRIVATE cxx_std_17)
 
 if(WIN32)
     add_custom_command(
-            TARGET Project3
+            TARGET Project3v2
             COMMENT "Copy OpenAL DLL"
-            PRE_BUILD COMMAND ${CMAKE_COMMAND} -E copy ${SFML_SOURCE_DIR}/extlibs/bin/$<IF:$<EQUAL:${CMAKE_SIZEOF_VOID_P},8>,x64,x86>/openal32.dll $<TARGET_FILE_DIR:Project3>
+            PRE_BUILD COMMAND ${CMAKE_COMMAND} -E copy ${SFML_SOURCE_DIR}/extlibs/bin/$<IF:$<EQUAL:${CMAKE_SIZEOF_VOID_P},8>,x64,x86>/openal32.dll $<TARGET_FILE_DIR:Project3v2>
             VERBATIM)
 endif()
 
-install(TARGETS Project3)
+install(TARGETS Project3v2)
